--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
 asgiref==3.11.0
-Django==6.0
+Django==4.2.10  # Slightly older, more stable version
 django-cors-headers==4.9.0
 djangorestframework==3.16.1
-djangorestframework_simplejwt==5.5.1
+djangorestframework-simplejwt==5.5.1
 PyJWT==2.10.1
 python-dotenv==1.2.1
 sqlparse==0.5.4
 tzdata==2025.2
-vercel==0.0.0
 whitenoise==6.6.0
 gunicorn==21.2.0
