--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,12 @@ asgiref==3.11.0
 Django==6.0
 django-cors-headers==4.9.0
 djangorestframework==3.16.1
-djangorestframework_simplejwt==5.5.1
+djangorestframework-simplejwt==5.5.1
 PyJWT==2.10.1
 python-dotenv==1.2.1
 sqlparse==0.5.4
 tzdata==2025.2
+gunicorn==21.2.0
+whitenoise==6.6.0
+dj-database-url==2.1.0
+psycopg2-binary==2.9.9
