--- a/render.yaml
+++ b/render.yaml
@@ -16,11 +16,4 @@ services:
         generateValue: true
       - key: WEB_CONCURRENCY
         value: 4
-    plan: free # or 'starter' or 'standard' for production
-
-# Uncomment and configure if you need a database
-# databases:
-#   - name: penwise-db
-#     databaseName: penwise
-#     user: penwise_user
-#     plan: free  # or 'starter' or 'standard' for production
+    plan: free
